Переделывает позиционирование кота на десктопе

--- a/source/less/blocks/main-title.less
+++ b/source/less/blocks/main-title.less
@@ -82,8 +82,8 @@
     content: "";
     min-width: 709px;
     min-height: 609px;
-    top: 252px;
-    left: 50px;
+    top: -25px;
+    left: 10px;
     z-index: -1;
   }
 }
@@ -95,8 +95,8 @@
     content: "";
     min-width: 522px;
     min-height: 500px;
-    top: 140px;
-    right: 344px;
+    top: -350px;
+    right: 230px;
   }
 }
 
@@ -147,7 +147,7 @@
     background-image: url("../img/main-title-bg-image-desktop.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: right;
+    background-position: left;
   }
 
   @media (min-resolution: 2dppx) {
@@ -186,4 +186,8 @@
     margin-left: 80px;
     margin-bottom: 0;
   }
+}
+
+.main-title__image-wrapper {
+  position: relative;
 }
